--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@alitajs/antd-plus": "^2.5.0",
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-descriptions": "^1.2.0",
     "@ant-design/pro-form": "^1.3.0",
