--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "ant-design-pro",
-  "version": "5.0.0-beta.2",
+  "name": "sma_management",
+  "version": "1.0.0",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "野村东方国际SMA财富投管系统",
+  "author": "chuanchao.peng@nomuraoi-sec.com",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
